[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "pandas>=2.3.1",
    "docx>=0.2.4",
    "google-api-python-client>=2.178.0",
    "google-auth>=2.40.3",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "google-generativeai>=0.8.5",
]
